# cmake_template

project/: CMakeLists.txt  CMakePresets.json
project/common/config/: configx.cpp  configx.h
project/common/log/: logx.cpp  logx.h
project/config/: config.json
project/subprocess/: CMakeLists.txt
project/subprocess/src/: main.cpp
project/subproject/: CMakeLists.txt
project/subproject/src/: main.cpp
